[project]
name = "claireai"
version = "0.1.0"
description = "One GenAI Framework to Rule Them All. Developer-first, fully transparent, production-ready."
readme = "README.md"
authors = [
    { name = "Luca Strano", email = "strano.lucass@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
